--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,6 @@
 <body>
     <h1>Witamy w Ksaizace adresowej</h1>
     <h2><a th:href="@{/people}">Wyswietl swoje kontakty</a> </h2>
-    <h2><a th:href="@{/addform}">Dodaj kontakty</a> </h2>
+    <h2><a th:href="@{/add-contact}">Dodaj kontakty</a> </h2>
 </body>
 </html>
