--- a/src/main/resources/templates/person.html
+++ b/src/main/resources/templates/person.html
@@ -20,27 +20,27 @@
             </tr>
             <tr>
                 <td>Numer Telefonu:</td>
-                <td th:text="${person.contact.mobileNumber}">Brak</td>
+                <td th:text="${person.mobileNumber}">Brak</td>
 
             </tr>
             <tr>
                 <td>Email:</td>
-                <td th:text="${person.contact.email}">Brak</td>
+                <td th:text="${person.email}">Brak</td>
 
             </tr>
             <tr>
                 <td>Ulica:</td>
-                <td th:text="${person.address.street}">Brak</td>
+                <td th:text="${person.street}">Brak</td>
 
             </tr>
             <tr>
                 <td>Numer domu:</td>
-                <td th:text="${person.address.houseNumber}">Brak</td>
+                <td th:text="${person.houseNumber}">Brak</td>
 
             </tr>
             <tr>
                 <td>Miejscowosc:</td>
-                <td th:text="${person.address.city}">Brak</td>
+                <td th:text="${person.city}">Brak</td>
 
             </tr>
         </table>
