--- a/src/main/resources/templates/addform.html
+++ b/src/main/resources/templates/addform.html
@@ -9,12 +9,12 @@
     <form action="#" th:action="@{/save-contact}" method="post">
         <p>Imie: <input type="text" th:field="${person.firstname}"></p>
         <p>Nazwisko: <input type="text" th:field="${person.lastname}"></p>
-        <p>Numer Telefonu: <input type="text" th:field="${person.contact.mobileNumber}"></p>
-        <p th:errors="*{person.contact.email}">Email errors</p>
-        <p>Email: <input type="text" th:field="${person.contact.email}"></p>
-        <p>Ulica: <input type="text" th:field="${person.address.street}"></p>
-        <p>Nr domu: <input type="text" th:field="${person.address.houseNumber}"></p>
-        <p>Miejscowosc: <input type="text" th:field="${person.address.city}"></p>
+        <p>Numer Telefonu: <input type="text" th:field="${person.mobileNumber}"></p>
+        <p th:errors="*{person.email}">Email errors</p>
+        <p>Email: <input type="text" th:field="${person.email}"></p>
+        <p>Ulica: <input type="text" th:field="${person.street}"></p>
+        <p>Nr domu: <input type="text" th:field="${person.houseNumber}"></p>
+        <p>Miejscowosc: <input type="text" th:field="${person.city}"></p>
         <input type="submit" value="Dodaj">
     </form>
 </body>
