--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,5 +8,6 @@
     <h1>Witamy w Ksaizace adresowej</h1>
     <h2><a th:href="@{/people}">Wyswietl swoje kontakty</a> </h2>
     <h2><a th:href="@{/add-contact}">Dodaj kontakty</a> </h2>
+    <h2><a th:href="@{/logout}">Wyloguj</a> </h2>
 </body>
 </html>
