--- a/src/main/resources/templates/updateform.html
+++ b/src/main/resources/templates/updateform.html
@@ -11,13 +11,13 @@
         <p hidden = "true"><input type="number" th:field="${person.id}"> </p>
         <p>Imie: <input type="text" th:field="${person.firstname}"></p>
         <p>Nazwisko: <input type="text" th:field="${person.lastname}"></p>
-        <p hidden = "true"><input type="number" th:field="${person.contact.id}"> </p>
-        <p>Numer Telefonu: <input type="text" th:field="${person.contact.mobileNumber}"></p>
-        <p>Email: <input type="text" th:field="${person.contact.email}"></p>
-        <p hidden = "true"><input type="number" th:field="${person.address.id}"> </p>
-        <p>Ulica: <input type="text" th:field="${person.address.street}"></p>
-        <p>Nr domu: <input type="text" th:field="${person.address.houseNumber}"></p>
-        <p>Miejscowosc: <input type="text" th:field="${person.address.city}"></p>
+        <p th:errors="${person.mobileNumber}">Number errors</p>
+        <p>Numer Telefonu: <input type="text" th:field="${person.mobileNumber}"></p>
+        <p th:errors="${person.email}">Email errors</p>
+        <p>Email: <input type="text" th:field="${person.email}"></p>
+        <p>Ulica: <input type="text" th:field="${person.street}"></p>
+        <p>Nr domu: <input type="text" th:field="${person.houseNumber}"></p>
+        <p>Miejscowosc: <input type="text" th:field="${person.city}"></p>
         <input type="submit" value="Edytuj">
     </form>
 </body>
