register email verify

--- a/src/main/resources/templates/registerConfirmed.html
+++ b/src/main/resources/templates/registerConfirmed.html
@@ -2,10 +2,10 @@
 <html  xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>HomePage</title>
+    <title>Konto potwierdzone</title>
 </head>
 <body>
-<h1>Na Twoja skrzynke zostal wyslany link potwierdzajacy, kliknij w niego aby moc sie zalogowac</h1>
+<h1>Link zostal potwierdzony, mozesz teraz sie zalogowac</h1>
 <h2><a th:href="@{/}">Powrot na strone glowna</a> </h2>
 </body>
 </html>
