Contact html and css added

--- a/frontend/src/app/contact-data/contact-data.component.html
+++ b/frontend/src/app/contact-data/contact-data.component.html
@@ -1,1 +1,40 @@
-<p>contact-data works!</p>
+<div id="container">
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label>Imie</label><br>
+      <label class="element">Adam</label><br>
+    </div>
+    <div class="form-group col-md-6">
+      <label>Nazwisko</label><br>
+      <label class="element">Żmijewski</label><br>
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label>Email</label><br>
+      <label class="element">zmijewskiadam94@gmail.com</label><br>
+    </div>
+    <div class="form-group col-md-6">
+      <label>Numer Telefonu</label><br>
+      <label class="element">516403893</label><br>
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="form-group col-md-4">
+      <label>Adres</label><br>
+      <label class="element">Przejazd</label><br>
+    </div>
+    <div class="form-group col-md-4">
+      <label>Numer Domu</label><br>
+      <label class="element">4/38</label><br>
+    </div>
+    <div class="form-group col-md-4">
+      <label>Miasto</label><br>
+      <label class="element">Warszawa</label><br>
+    </div>
+    <div class="btn-group">
+      <button type="button" class="btn btn-primary">Edytuj</button>
+      <button type="button" class="btn btn-danger">Usun</button>
+    </div>
+  </div>
+</div>
