--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,10 +2,16 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <app-header></app-header>
   </nav>
-  <div class="loginForm" [hidden]="true">
-   <app-login-form></app-login-form>
+  <div class="element" [hidden]="true">
+   <app-register-form></app-register-form>
   </div>
-  <div class="contact-table">
+  <div class="element" [hidden] = "true">
     <app-contact-table></app-contact-table>
+  </div>
+  <div class="element" [hidden]="true">
+    <app-contact-form></app-contact-form>
+  </div>
+  <div class="element" >
+    <app-contact-data></app-contact-data>
   </div>
 </div>
