--- a/frontend/src/app/register-form/register-form.component.html
+++ b/frontend/src/app/register-form/register-form.component.html
@@ -1,1 +1,15 @@
-<p>register-form works!</p>
+<form class="loginForm">
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Hasło</label>
+    <input type="password" class="form-control" id="exampleInputPassword1">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Powtórz hasło</label>
+    <input type="password" class="form-control" id="exampleInputPassword2">
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
