--- a/frontend/src/app/contact-table/contact-table.component.html
+++ b/frontend/src/app/contact-table/contact-table.component.html
@@ -14,24 +14,12 @@
   </tr>
   </thead>
   <tbody>
-  <tr>
-    <th scope="row">1</th>
-    <td>Mark</td>
-    <td>Otto</td>
+  <ng-container *ngFor="let contact of contacts; let i = index">
+    <th scope="row">{{i}}</th>
+    <td>{{contact.firstname}}</td>
+    <td>{{contact.lastname}}</td>
     <td>@mdo</td>
-  </tr>
-  <tr>
-    <th scope="row">2</th>
-    <td>Jacob</td>
-    <td>Thornton</td>
-    <td>@fat</td>
-  </tr>
-  <tr>
-    <th scope="row">3</th>
-    <td>Larry</td>
-    <td>the Bird</td>
-    <td>@twitter</td>
-  </tr>
+  </ng-container>
   </tbody>
 </table>
-<button type="button" class="btn btn-primary">Dodaj kontakt</button>
+<button type="button" class="btn btn-primary" (click)="addContact()">Dodaj kontakt</button>
